fixing greeting text wrap

--- a/flash/hotspot/assets/css/default-style.css
+++ b/flash/hotspot/assets/css/default-style.css
@@ -72,10 +72,13 @@ article {
 .login-header {
   width: 100%;
   height: 100%;
-  margin: 1rem;
   font-size: 1.3rem;
   text-align: center;
-  /*TODO add more padding left and right*/
+}
+
+.login-header span {
+  display: block;
+  margin: 2rem 1rem;
 }
 
 .login form {
